# pyratatui

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml  test_all_examples.py
.github/workflows/: ci.yml
docs/: faq.md  index.md  installation.md
docs/examples/: advanced_examples.md  minimal_examples.md
docs/reference/: api_surface.md  chart_widget.md  checkbox_widget.md  menu_widget.md  piechart_widget.md  terminal.md  throbber_widget.md  widgets.md
docs/tutorial/: async_updates.md  progress_bar.md
examples/: 07_async_reactive.py  30_image_view.py  31_canvas_drawing.py  32_map_widget.py  33_button_widget.py  34_throbber.py  35_menu_widget.py  36_piechart.py  37_checkbox_widget.py  38_chart_widget.py
python/pyratatui/: __init__.py  __init__.pyi  async_terminal.py  chart.py  checkbox.py  cli.py  helpers.py  menu.py  piechart.py  throbber.py
python/pyratatui/core/: __init__.py
python/pyratatui/layout/: __init__.py
python/pyratatui/manager/: __init__.py  install.py  list.py  run.py  uninstall.py  utils.py
python/pyratatui/styling/: __init__.py
python/pyratatui/widgets/: __init__.py  chart.py  checkbox.py  menu.py  piechart.py  throbber.py
scripts/: build.ps1  build.sh  format.ps1  format.sh
src/: lib.rs
src/button_widget/: button.rs  mod.rs
src/canvas_widget/: canvas.rs  mod.rs
src/chart_widget/: mod.rs
src/checkbox_widget/: mod.rs
src/map_widget/: map.rs  mod.rs
src/menu_widget/: mod.rs
src/piechart_widget/: mod.rs
src/terminal/: mod.rs
src/throbber_widget/: mod.rs
tests/python/: test_pyratatui.py
